--- a/TodoAPI/appsettings.json
+++ b/TodoAPI/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "TodoListDatabaseSettings": {
+    "TodosCollectionName": "Todos",
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "TodoListDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
